--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="map"></div>
 <script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoiYnRib2xpbiIsImEiOiJjbHoyOTgyMnMwamVuMmtweWJ0YnhubGx3In0.KDNPTRrCB2MV42QLtnrQuA';
+  mapboxgl.accessToken = pk.eyJ1IjoiYnRib2xpbiIsImEiOiJjbHoyOTgyMnMwamVuMmtweWJ0YnhubGx3In0.KDNPTRrCB2MV42QLtnrQuA;
 
   const retroStyle = {
     version: 8,
