--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Retro Weather Map Style</title>
+  <title>Retro Weather Map - TV Style</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
 
   const retroStyle = {
     version: 8,
-    name: "Retro Base Style",
+    name: "First Alert TV Style",
     glyphs: "mapbox://fonts/mapbox/{fontstack}/{range}.pbf",
     sources: {
       "mapbox-streets": {
@@ -31,7 +31,7 @@
         id: "background",
         type: "background",
         paint: {
-          "background-color": "#002244"
+          "background-color": "#023059"
         }
       },
       {
@@ -40,7 +40,7 @@
         source: "mapbox-streets",
         "source-layer": "land",
         paint: {
-          "fill-color": "#003366"
+          "fill-color": "#f6d425"
         }
       },
       {
@@ -49,7 +49,7 @@
         source: "mapbox-streets",
         "source-layer": "water",
         paint: {
-          "fill-color": "#001a33"
+          "fill-color": "#002447"
         }
       },
       {
@@ -63,9 +63,9 @@
           "text-size": 14
         },
         paint: {
-          "text-color": "#ffff00",
+          "text-color": "#ffffff",
           "text-halo-color": "#000000",
-          "text-halo-width": 1
+          "text-halo-width": 2
         }
       }
     ]
@@ -74,8 +74,8 @@
   const map = new mapboxgl.Map({
     container: "map",
     style: retroStyle,
-    center: [-98.5795, 39.8283], // Centered on USA
-    zoom: 4
+    center: [-82.4, 27.8], // Centered on Florida
+    zoom: 6
   });
 </script>
 </body>
